samples/_failures_safe/1761543031_c2bf85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f5df43f.c: In function ‘main’:
./samples/SAFE/__tmp_4f5df43f.c:152:12: error: missing terminating " character
  152 |     printf("Final
      |            ^~~~~~
./samples/SAFE/__tmp_4f5df43f.c:152:5: error: expected expression at end of input
  152 |     printf("Final
      |     ^~~~~~
./samples/SAFE/__tmp_4f5df43f.c:152:5: error: expected declaration or statement at end of input
